unpackaged/objects/ProcedureProfiling__c.object
<CustomObject>
  <fields>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Procedure_Profiling</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
  </fields>
  <fields>
    <fullName>AtlantisBridgeBase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Atlantis Bridge Base</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Atlantis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Atlantis</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Axeos3D__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Axeos 3D</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Axeos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Axeos</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>BioceramicSealer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bioceramic Sealer</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>CEREC_Tessera__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CEREC Tessera</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>CaseConnect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Connect</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>CeramXSpectra__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ceram X Spectra</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Cercon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cercon</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <length>5000</length>
    <type>Html</type>
  </fields>
  <fields>
    <fullName>DSPrimeTaper__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DS Prime Taper</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Enhance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enhance</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Guttacore__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guttacore</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Heliodent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Heliodent</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>InLabMCXL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Lab MCXL</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>InLabSoftware__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Lab Software</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Intego__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intego</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>MCX5__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MCX5</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>OrthophosSL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Orthophos SL</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>OrthophosS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Orthophos S</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>OssixBonePlus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ossix Bone &amp; Plus</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>OssixVolumax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ossix Volumax</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>PTUltimateSystem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PT Ultimate System</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>PalodentV3360__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Palodent V3 360</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>PrimeMill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PrimeMill</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>PrimePrint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PrimePrint</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>PrimescanCEREC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primescan CEREC</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>PrimescanDI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primescan DI</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Profire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Profire</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>SDRFlow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SDR Flow+</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>SimplantGuide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Simplant Guide</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Sinius__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sinius</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Speedfire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Speedfire</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>SureSmileAligners__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SureSmile Aligners</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>SurefilOne__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Surefil One</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Teneo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Teneo</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Tessera__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tessera</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>VPro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>V-Pro</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>WaveOneGoldSystem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WaveOne Gold System</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>XRay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>X Ray</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>XSmartMotor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>X Smart Motor</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>XiosIntraoralSensor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Xios Intraoral Sensor</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>illumine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>illumine</label>
    <type>Checkbox</type>
  </fields>
  <label>Workflow Profiling</label>
  <nameField>
    <displayFormat>WP{0000}</displayFormat>
    <label>Workflow Profiling #</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>Workflow Profiling</pluralLabel>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>